--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
           packages:
           - gfortran
       env: PROJECT="Osi" 
-           FETCH_ARGS="-no-prompt"
+           FETCH_ARGS="--no-prompt"
            BUILD_ARGS="ADD_CXXFLAGS=-DFOO"
            INSTALL=true
     - os: linux
